test/invalid/prop-polymorphic-assign2.js
var o2 =  { method: function(x) { return x; } };


o2.method = function (x) { x = 2; return x; };

